projects/courseworkProjects/2ndCoursewordv2/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/Applications/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/macbook/Library/gitrepos/programming-algorithms-and-data-structures/projects/2ndCourseWorkv2/2ndCoursewordv2
-d
/Users/macbook/Library/gitrepos/programming-algorithms-and-data-structures/projects/2ndCourseWorkv2/2ndCoursewordv2/doc
-encoding
UTF-8
-charset
UTF-8
/Users/macbook/Library/gitrepos/programming-algorithms-and-data-structures/projects/2ndCourseWorkv2/2ndCoursewordv2/Audible.java
<---- end of javadoc command ---->
Loading source file /Users/macbook/Library/gitrepos/programming-algorithms-and-data-structures/projects/2ndCourseWorkv2/2ndCoursewordv2/Audible.java...
/Users/macbook/Library/gitrepos/programming-algorithms-and-data-structures/projects/2ndCourseWorkv2/2ndCoursewordv2/Audible.java:1: error: '{' expected
public class Audible implements Contentable extends Exposition
                                           ^
1 error
